--- a/src/main/resources/templates/user/layout/default_layout.html
+++ b/src/main/resources/templates/user/layout/default_layout.html
@@ -60,6 +60,8 @@
 
 <div layout:fragment="content"></div>
 
+<script src="https://unpkg.com/scrollreveal"></script>
+
 <!-- popper min js -->
 <script th:src="@{/user/assets/js/popper.min.js}"></script>
 <!-- Latest compiled and minified Bootstrap -->
