--- a/src/main/resources/static/user/assets/css/style.css
+++ b/src/main/resources/static/user/assets/css/style.css
@@ -7144,6 +7144,7 @@ blockquote p:last-child {
 	text-align: center;
 }
 .subscribe_popup .close {
+	text-decoration-line: none;
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -7158,6 +7159,7 @@ blockquote p:last-child {
 	border: 0;
 }
 .subscribe_popup .close i {
+	text-decoration-line: none;
 	font-size: 40px;
 }
 .modal {
