편집샵 찜 개발

--- a/src/main/resources/static/user/assets/css/custom-style.css
+++ b/src/main/resources/static/user/assets/css/custom-style.css
@@ -290,6 +290,12 @@ body{
     transition: all .2s ease-in-out;
 }
 
+.hover-small:hover {
+    transform: scale(0.95);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+    transition: all .2s ease-in-out;
+}
+
 
 .circle-top {
     border-radius: 10px 10px 0 0 !important;
@@ -310,7 +316,7 @@ body{
 }
 
 /*카드뷰 길이 일정하게 만들기*/
-div.card .card-body .card-title {
+div.card .card-body[data-same-height='true'] .card-title {
     margin-bottom: 0.5rem;
     max-height: 2.3em;
     white-space: nowrap;
@@ -320,7 +326,7 @@ div.card .card-body .card-title {
 }
 
 /*카드뷰 길이 일정하게 만들기*/
-div.card .card-body .card-text {
+div.card .card-body[data-same-height='true'] .card-text {
     margin-bottom: 0.5rem;
     max-height: 2.3em;
     white-space: nowrap;
