--- a/src/main/resources/templates/user/content/pages/content-list.html
+++ b/src/main/resources/templates/user/content/pages/content-list.html
@@ -92,7 +92,7 @@
 	                                         class="card-img-top rounded"
 	                                         alt="피드 썸네일 이미지">
 	                                </div>
-	                                <div class="card-body">
+	                                <div class="card-body" data-same-height='true'>
 	                                    <h5 class="card-title">${feed.title}</h5>
 	                                    <p class="card-text">${feed.description}</p>
 	                                    <a href="/feed/${feed.id}"
