--- a/src/main/resources/templates/user/content/main.html
+++ b/src/main/resources/templates/user/content/main.html
@@ -155,7 +155,7 @@
 							<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top rounded"
 							     alt="피드 썸네일 이미지">
 						</div>
-						<div class="card-body">
+						<div class="card-body" data-same-height='true'>
 							<h5 class="card-title" th:text="${feed.title}"></h5>
 							<th:block>
 								<p class="card-text" th:text="${feed.description}">
@@ -190,7 +190,7 @@
 							<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top circle-top"
 							     alt="피드 썸네일 이미지">
 						</div>
-						<div class="card-body">
+						<div class="card-body" data-same-height='true'>
 							<h5 class="card-title" th:text="${feed.title}"></h5>
 							<th:block>
 								<p class="card-text" th:text="${feed.description}">
