컨텐츠 삭제 및 배너 수정 추가 구현

--- a/src/main/resources/templates/admin/content/pages/contents/create.html
+++ b/src/main/resources/templates/admin/content/pages/contents/create.html
@@ -47,6 +47,15 @@
 				</div>
 			</div>
 
+			<div class="row mb-3 ms-2">
+				<hr>
+				<div class="form-check form-switch">
+					<input class="form-check-input" type="checkbox" id="isBanner" th:field="*{isBanner}"/>
+					<label class="form-check-label" for="isBanner">체크시 배너에 등록됩니다.</label>
+				</div>
+			</div>
+			<hr>
+
 			<div class="row mb-3">
 				<!--			썸네일 이미지 업로드-->
 				<label class="form-label" for="thumbnail">썸네일 이미지 업로드</label>
