--- a/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/fragments/sidebar.html
@@ -150,13 +150,13 @@
 					공지사항 관리
 				</a>
 
-				<a class="nav-link" th:href="@{/admin/banner/list}">
+				<!--<a class="nav-link" th:href="@{/admin/banner/list}">
 					<div class="sb-nav-link-icon">
-						<svg class="svg-inline--fa fa-arrow-right-from-bracket" aria-hidden="true" focusable="false"
+						<svg class="svg-inline&#45;&#45;fa fa-arrow-right-from-bracket" aria-hidden="true" focusable="false"
 						     role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
-						</svg><!-- <i class="fas fa-chart-area"></i> Font Awesome fontawesome.com --></div>
+						</svg>&lt;!&ndash; <i class="fas fa-chart-area"></i> Font Awesome fontawesome.com &ndash;&gt;</div>
 					배너 관리
-				</a>
+				</a>-->
 
 				<a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#popupAdmin"
 				   aria-expanded="false" aria-controls="popupAdmin">
