--- a/src/main/resources/templates/user/content/pages/feed/read.html
+++ b/src/main/resources/templates/user/content/pages/feed/read.html
@@ -91,14 +91,15 @@
         }
 
         .category {
-
+            color: black;
+            background-color: rgba(255, 255, 255, 0.5);
         }
 
         .title {
             color: white;
             background: black;
-            border-radius: 0.3em;
-            padding: 0.3em;
+            /*border-radius: 0.3em;*/
+            /*padding: 0.3em;*/
         }
 
 
