--- a/src/main/resources/templates/user/fragments/banner.html
+++ b/src/main/resources/templates/user/fragments/banner.html
@@ -4,78 +4,86 @@
 <div class="banner_section slide_wrap shop_banner_slider staggered-animation-wrap" th:fragment="banner">
 	<div id="carouselExampleControls" class="carousel slide carousel-fade light_arrow" data-bs-ride="carousel">
 		<div class="carousel-inner">
-			<div class="carousel-item active background_bg" th:data-img-src="@{/user/assets/images/banner8.jpg}">
+			<!--/*@thymesVar id="bannerFeed" type="com.sch.shift3.user.entity.ContentFeed"*/-->
+			<div class="carousel-item background_bg" th:classappend="${bannerStat.index == 0 ? 'active' : ''}"
+			     th:data-img-src="'/file/' + ${banner.thumbnailFileName}"
+			     th:each="banner : ${bannerFeed}">
 				<div class="banner_slide_content banner_content_inner">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-6 col-md-8 col-sm-9 col-10">
 								<div class="banner_content2">
 									<h6 class="mb-2 mb-sm-3 staggered-animation text-uppercase"
-									    data-animation="fadeInDown" data-animation-delay="0.2s">카테고리</h6>
+									    data-animation="fadeInDown" data-animation-delay="0.2s"
+									    th:text="${banner.category}" style="text-shadow: 1px 1px 10px lightgrey;"></h6>
 									<h2 class="staggered-animation" data-animation="fadeInDown"
-									    data-animation-delay="0.3s">컨텐츠 피드명111111</h2>
+									    data-animation-delay="0.3s" th:text="${banner.title}"
+									    style="text-shadow: 0 0 20px black; color: white;"></h2>
 									<p class="staggered-animation" data-animation="fadeInUp"
-									   data-animation-delay="0.4s">컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠
-										요약 </p>
+									   data-animation-delay="0.4s" th:text="${banner.description}"
+									   style="text-shadow: 0 0 10px black; color: white;"></p>
 									<a class="btn btn-line-fill btn-radius staggered-animation text-uppercase"
-									   href="shop-left-sidebar.html" data-animation="fadeInUp"
-									   data-animation-delay="0.5s">더 알아보기</a>
+									   th:href="'/feed/' + ${banner.id}" data-animation="fadeInUp"
+									   data-animation-delay="0.5s"
+									   style="color: white !important;background-color: rgba(0, 28, 99, 0.8);">
+										더 알아보기</a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="carousel-item background_bg" th:data-img-src="@{/user/assets/images/banner9.jpg}">
-				<div class="banner_slide_content banner_content_inner">
-					<div class="container">
-						<div class="row">
-							<div class="col-lg-6 col-md-8 col-sm-9 col-10">
-								<div class="banner_content2">
-									<h6 class="mb-2 mb-sm-3 staggered-animation text-uppercase"
-									    data-animation="fadeInDown" data-animation-delay="0.2s">카테고리</h6>
-									<h2 class="staggered-animation" data-animation="fadeInDown"
-									    data-animation-delay="0.3s">컨텐츠 피드명22222</h2>
-									<p class="staggered-animation" data-animation="fadeInUp"
-									   data-animation-delay="0.4s">컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠
-										요약 </p>
-									<a class="btn btn-line-fill btn-radius staggered-animation text-uppercase"
-									   href="shop-left-sidebar.html" data-animation="fadeInUp"
-									   data-animation-delay="0.5s">더 알아보기</a>
+
+			<!--			<div class="carousel-item background_bg" th:data-img-src="@{/user/assets/images/banner9.jpg}">
+							<div class="banner_slide_content banner_content_inner">
+								<div class="container">
+									<div class="row">
+										<div class="col-lg-6 col-md-8 col-sm-9 col-10">
+											<div class="banner_content2">
+												<h6 class="mb-2 mb-sm-3 staggered-animation text-uppercase"
+													data-animation="fadeInDown" data-animation-delay="0.2s">카테고리</h6>
+												<h2 class="staggered-animation" data-animation="fadeInDown"
+													data-animation-delay="0.3s">컨텐츠 피드명22222</h2>
+												<p class="staggered-animation" data-animation="fadeInUp"
+												   data-animation-delay="0.4s">컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠
+													요약 </p>
+												<a class="btn btn-line-fill btn-radius staggered-animation text-uppercase"
+												   href="shop-left-sidebar.html" data-animation="fadeInUp"
+												   data-animation-delay="0.5s">더 알아보기</a>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-			</div>
-			<div class="carousel-item background_bg" th:data-img-src="@{/user/assets/images/banner9.jpg}">
-				<div class="banner_slide_content banner_content_inner">
-					<div class="container">
-						<div class="row">
-							<div class="col-lg-6 col-md-8 col-sm-9 col-10">
-								<div class="banner_content2">
-									<h6 class="mb-2 mb-sm-3 staggered-animation text-uppercase"
-									    data-animation="fadeInDown" data-animation-delay="0.2s">카테고리</h6>
-									<h2 class="staggered-animation" data-animation="fadeInDown"
-									    data-animation-delay="0.3s">컨텐츠 피드명 333333333</h2>
-									<p class="staggered-animation" data-animation="fadeInUp"
-									   data-animation-delay="0.4s">컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠
-										요약 </p>
-									<a class="btn btn-line-fill btn-radius staggered-animation text-uppercase"
-									   href="shop-left-sidebar.html" data-animation="fadeInUp"
-									   data-animation-delay="0.5s">더 알아보기</a>
+						<div class="carousel-item background_bg" th:data-img-src="@{/user/assets/images/banner9.jpg}">
+							<div class="banner_slide_content banner_content_inner">
+								<div class="container">
+									<div class="row">
+										<div class="col-lg-6 col-md-8 col-sm-9 col-10">
+											<div class="banner_content2">
+												<h6 class="mb-2 mb-sm-3 staggered-animation text-uppercase"
+													data-animation="fadeInDown" data-animation-delay="0.2s">카테고리</h6>
+												<h2 class="staggered-animation" data-animation="fadeInDown"
+													data-animation-delay="0.3s">컨텐츠 피드명 333333333</h2>
+												<p class="staggered-animation" data-animation="fadeInUp"
+												   data-animation-delay="0.4s">컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠 요약 컨텐츠
+													요약 </p>
+												<a class="btn btn-line-fill btn-radius staggered-animation text-uppercase"
+												   href="shop-left-sidebar.html" data-animation="fadeInUp"
+												   data-animation-delay="0.5s">더 알아보기</a>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+						</div>-->
 		</div>
 		<ol class="carousel-indicators indicators_style2">
-			<li data-bs-target="#carouselExampleControls" data-bs-slide-to="0" class="active"></li>
-			<li data-bs-target="#carouselExampleControls" data-bs-slide-to="1"></li>
-
-			<li data-bs-target="#carouselExampleControls" data-bs-slide-to="2"></li>
+			<th:block th:each="banner : ${bannerFeed}">
+				<li data-bs-target="#carouselExampleControls" th:data-bs-slide-to="${bannerStat.index}"
+				    th:classappend="${bannerStat.index == 0 ? 'active' : ''}"></li>
+			</th:block>
 		</ol>
 	</div>
 </div>
